chore: update spotless, junit
Also clean up some compiler warnings and add --sun-misc-unsafe-memory-access=allow to unit test runner and CI workflow.